--- a/styles/modified.css
+++ b/styles/modified.css
@@ -3,6 +3,7 @@
     padding: 5px 135px ;
     font: font-family: 'Mulish', sans-serif;
 } */
+
 .orange-text{
     color: #FF5400;
 }
@@ -16,18 +17,18 @@
 
 /* header styles */
 .header-zero{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     margin: 0 auto;
     display: flex;
-    padding: 0px 235px ;
+    width: 1170px;
+    justify-content: space-between;
+}
+/* .nav-one{
+    width: 1170px;
+    /* justify-content: space-between;
+    margin: 0 auto;
+    /* display: flex; */ 
 
-}
-.nav-one{
-    justify-content: space-between;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}
 .tittle-nav{
     color: #131318;
     font-size: 1.2rem;
@@ -58,11 +59,7 @@
 .header-div{
     display: flex;
 }
-@media screen and (min-width: 600) and (max-width: 996){
-    .nav-one{
-        justify-content: baseline;
-    }
-}
+
 /* 2nd Feiled Starts */
 .banner{
     background-image:linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%),url("../Images/Group\ 13\ \(1\)\ \(1\).png");
@@ -160,15 +157,15 @@
 /* third img sec starts */
 
 .part3{
-    border: 6px solid blue; */
+    /* border: 2px solid blue;  */
     margin: 0 auto;
-    width: 1170px;
+    width: 1190px;
     height: 1350px;
-   margin-bottom: 400px;
-   margin-left: 15%;
+   margin-bottom: 00px;
+   /* margin-left: 15%; */
 }
 .universal-text3{
-    border: 2px solid blue; */
+    /* border: 2px solid blue; */ */
     margin: 0 auto;
     padding: 20px 035px 235px 0px ;
     width: 1150px;
@@ -228,7 +225,7 @@ line-height: 26px; /* 162.5% */
 }
 .secound-row{
     display: flex;
-    /* border: 2px solid blue; */
+    /* border: 2px solid blue;  */
     height: 320px;
 
 }
@@ -254,7 +251,7 @@ line-height: 26px; /* 162.5% */
     text-align: center;
     background-image: url(../Images/Rectangle\ 7.png);
     background-repeat: no-repeat;
-    width: 474px;
+    width: 470px;
     height: 286px;
     flex-shrink: 0;
     color: #FFF;
@@ -278,7 +275,7 @@ line-height: 26px; /* 162.5% */
 }
 .third-row{
     display: flex;
-    /* border: 2px solid green; */
+    /* border: 2px solid green;  */
     height: 320px;
 }
 .part6-img{
@@ -311,16 +308,16 @@ line-height: 26px; /* 162.5% */
 /* 4th part strats from here */
 .part-4{
 
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 0 auto;
     padding: 20px 035px 235px 0px ;
-    width: 1170px;
-    height: 1050px;
-   margin-left: 15%;
+    width: 1155px;
+    height: 650px;
+   /* margin-left: 15%; */
    margin-bottom: 20px;
 }
 .Choose{
-    padding: 10px 0px;
+    padding: 0px 0px;
     margin: auto;
   }
   .choose-title{
@@ -349,11 +346,13 @@ line-height: 26px; /* 162.5% */
 
  .card-1{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 50px;
-    width: 1820px;
+    /* align-items: center;
+    justify-content: space-between; */
+    gap: 30px;
+    
+    /* width: 1820px; */
     justify-content: center;
+    margin-left: 40px;
    
   
   
@@ -363,12 +362,10 @@ line-height: 26px; /* 162.5% */
     border-radius: 16px;
     border: 1px solid rgba(233, 68, 68, 0.20);
     background: rgba(233, 68, 68, 0.05);
-  
-  
-  }
-  .card-2{
     padding: 32px;
+  
   }
+ 
  
   
   .title-4{
@@ -432,14 +429,14 @@ line-height: 26px; /* 162.5% */
     line-height: 26px; 
 }
 .part-5{
-
-    border: 5px solid olivedrab;
+/* 
+    border: 5px solid olivedrab; */
     margin: 0 auto;
     padding: 20px 035px 235px 0px ;
     width: 1170px;
-    height: 1800px;
-   margin-left: 15%;
-   margin-bottom: 5px;
+    height: 1600px;
+
+
 
 }
 .background1{
@@ -527,16 +524,20 @@ line-height: 26px; /* 162.5% */
     /* border: 2px solid blue; */
     margin: 0 auto;
     display: flex;
-    padding: 20px 035px 235px 0px ;
+    padding: 0px 35px 235px 0px ;
     width: 1170px;
     height: 350px;
-    padding-bottom: 20%;
+    padding-top: 1px;
     
 }
+.sec3text-container{
+    margin-top: -70px;
+
+}
 .mountain6{
+    margin-top: -70px;
     width: 610px;
     height: 524px;
-    flex-shrink: 0;  
     
 }
 
@@ -581,14 +582,13 @@ line-height: 26px; /* 162.5% */
 }
 /* sec 7 starts form here */
 .sec-7{
-    /* border: 2px solid blue; */ */
+    /* border: 2px solid blue;  */
     margin: 0 auto;
     display: flex;
     padding: 20px 350px 235px 0px ;
     width: 850px;
     height: 270px;
     padding-bottom: 10%;
-    margin-left: 15%;
     gap: 20px;
 }
 .text-container7{
@@ -600,9 +600,7 @@ line-height: 26px; /* 162.5% */
     height:420px;
     flex-shrink: 0;
 }
-.text-contants7{
-    
-}
+
 .news{
     padding-left: 10%;
     color: #131318;
@@ -664,14 +662,16 @@ line-height: 26px; /* 162.5% */
 }
 /* footer section styles */
 footer {
+    /* border: 3px solid saddlebrown; */
     background: rgba(19, 19, 24, 0.05);
     padding: 130px 110px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 950px;
+    width: 980px;
     height: 270px;
-    margin-left: 15%;
+    margin: 0 auto;
+  
   }
   
   
@@ -703,20 +703,33 @@ footer {
     width: 60px;
     margin-left: 22px;
   }
-.start-div-f{
+  .icon-p-div{
+    margin-left: 40%;
     justify-self: center;
-    display: inline;
+    display:flex;
 }
 
   
-.title{
+.kk-txt{
+    
     color: #131318;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 800;
     line-height: normal;
     font-family:  'Mulish', sans-serif;
     
  
+}
+.para-last{
+    margin-left: 50px;
+    width: 769px;
+    color: #5A5A5D;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
 }
 
 .logo{
@@ -730,7 +743,231 @@ padding-right: 20px;
 .text{
     color: #ff2a00;
 }
-@media screen and (min-width: 600) and (max-width: 996){
 
-}
+@media only screen and (max-width: 600px) {
+    .ul-one{
+       background-color:#ff2a00;
+       display: none;
+       
+     }
+   }
     
+   @media only screen and (max-width: 600px) {
+    .nav-one{
+       width: 375px;
+       
+     }
+     .banner{
+        width: 335px;
+        height: 483px;
+        
+     }
+     .first-para{
+        margin-left: 5%;
+        padding-right: 20%;
+     }
+     .exp-with-para{
+        align-items: center;
+     }
+     .first-feild{
+        display:contents;
+     }
+     .select-s{
+        gap: 20px;
+     }
+     .when-text{
+        width: 21%;
+        /* margin-left: 7%; */
+        margin-top: 20%;
+     }
+     .btn-prime{
+          margin-left: 40%;
+          margin-top: 10%;
+
+     }
+     .where-text{
+         margin-left: 10%;
+     }
+     .exp-text{
+        padding-top: 25%;
+     }
+   }
+   @media only screen and (max-width: 600px){
+    .sec-para{
+        width: 335px;
+        height: 50px;
+    }
+    .sec-two-ul{
+        width: 300px;
+        height: 210px;
+    } 
+    .sec1{
+        display: inline-block;
+    }
+    .sec2-img-container{
+        max-width: 200px;
+    }
+    .mountain{
+        margin-top: 30%;
+        width: 370px;
+    }
+   }
+   @media only screen and (max-width: 600px){
+     .universal-text3{
+        width: 375px;
+        height: 3%;
+     }
+     .first-row{
+        display: inline-block;
+     }
+     .part1-img{
+        width: 360px;
+        height: 145px;
+        margin-bottom: 5%;
+     }
+     .part2-img{
+        margin-left: 0%;
+        width: 360px;
+        height: 145px;
+     }
+     .secound-row{
+        display:list-item;
+        
+     }
+     .part3-img{
+         margin-top: 6%;
+        margin-bottom: 0%;
+        padding-bottom: -7%;
+    
+     }
+     .part4-img{
+        margin-left: 0px;
+        margin-top: -5%;
+        margin-right: 50px;
+        width: 370px;
+        
+      
+     }
+     .part5-img{
+        margin-top: -5%;
+        margin-left: 60px;
+        width: 335px;
+        /* height: 176px; */
+        
+     }
+     .third-row{
+        margin-top: 56%;
+        display: inline-table;
+        
+        
+     }
+     .part6-img{
+        width: 365px;
+     }
+     .part7-img{
+        width: 365px;
+        margin-left: 0px;
+     }
+     .part3{
+        margin-bottom: 270%;
+     }
+    }
+
+    @media only screen and (max-width: 600px){
+        .para-4{
+            margin-left: 0%;
+           
+        }
+       .choose-title{
+          margin-right: 67%;
+       }
+       .para-4{
+           /* background-color:aquamarine; */
+           padding-left: 70px;
+           width: 220px;
+       }
+       .card-1{
+        display: list-item;
+        width: 320px;
+        gap: 10px;
+       }
+       .card-2{
+        margin-top: 10px;
+       }
+
+
+       .boxes{
+         height: 300%;
+       }
+       .end-4{
+        margin-bottom: 30%;
+       }
+       .cards{
+        display: inline;
+        margin-right: 65%;
+        width: 250px;
+       }
+    }
+
+    @media only screen and (max-width: 600px){
+        .part-5{
+            margin-top: 130%;
+            width: 320px;
+        }
+        .background1{
+            width: 335px;
+            height: 500px;
+        }
+        .layout{
+         
+            width: 303px;
+            height: 297px;
+            left: 3%; 
+        }
+        .background2{
+            width: 335px;
+            height: 500px;
+        }
+        .layout2{
+         
+            width: 303px;
+            height: 297px;
+            left: 3%; 
+        }
+        .background3{
+            width: 335px;
+            height: 500px;
+        }
+        .layout3{
+         
+            width: 303px;
+            height: 297px;
+            left: 3%; 
+        }
+    }
+
+    @media only screen and (max-width: 600px){
+        .sec6{
+            display: list-item;
+            padding-bottom: 270%;
+            height: 1px;
+           
+        }
+        .sec3text-container{
+            width: 375px;
+            height: 600px;
+        }
+        .mountain6{
+            width: 375px;
+            height: 200px;
+        }
+        .sec-7{
+            display:inline;
+        }
+    }
+    
+    @media only screen and (max-width: 600px){
+        .sec6{
+            margin-top: 30%;
+        }
+    }
